1.1/ANTLR4PLGNB82/src/org/nemesis/antlr/v4/netbeans/v8/grammar/syntax/checking/impl/ANTLRv4Parser.java
// Generated from ANTLRv4.g4 by ANTLR 4.6
package org.nemesis.antlr.v4.netbeans.v8.grammar.syntax.checking.impl;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ANTLRv4Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ID_STARTING_WITH_UPPERCASE=1, ID_STARTING_WITH_LOWERCASE=2, LEXER_CHAR_SET=3, 
		DOC_COMMENT=4, BLOCK_COMMENT=5, LINE_COMMENT=6, INT=7, STRING_LITERAL=8, 
		UNTERMINATED_STRING_LITERAL=9, BEGIN_ARGUMENT=10, BEGIN_ACTION=11, OPTIONS=12, 
		TOKENS=13, CHANNELS=14, IMPORT=15, FRAGMENT=16, LEXER=17, PARSER=18, GRAMMAR=19, 
		PROTECTED=20, PUBLIC=21, PRIVATE=22, RETURNS=23, LOCALS=24, INIT=25, AFTER=26, 
		THROWS=27, CATCH=28, FINALLY=29, MODE=30, COLON=31, COLONCOLON=32, COMMA=33, 
		SEMI=34, LPAREN=35, RPAREN=36, LBRACE=37, RBRACE=38, RARROW=39, LT=40, 
		ASSOC=41, RIGHT=42, LEFT=43, FAIL=44, GT=45, ASSIGN=46, QUESTION=47, STAR=48, 
		PLUS_ASSIGN=49, PLUS=50, OR=51, DOLLAR=52, RANGE=53, DOT=54, AT=55, HEADER=56, 
		MEMBERS=57, SHARP=58, NOT=59, ID=60, WS=61, ERRCHAR=62, END_ARGUMENT=63, 
		UNTERMINATED_ARGUMENT=64, ARGUMENT_CONTENT=65, HEADER_P_LINE_COMMENT=66, 
		HEADER_P_WS=67, HEADER_PACKAGE=68, HEADER_IMPORT=69, HEADER_STATIC=70, 
		HEADER_WS=71, HEADER_END=72, UNTERMINATED_HEADER=73, END_ACTION=74, UNTERMINATED_ACTION=75, 
		ACTION_CONTENT=76, OPT_BLOCK_COMMENT=77, OPT_LINE_COMMENT=78, SUPER_CLASS=79, 
		LANGUAGE=80, TOKEN_VOCAB=81, TOKEN_LABEL_TYPE=82, OPT_WS=83, TOK_BLOCK_COMMENT=84, 
		TOK_LINE_COMMENT=85, TOK_ID=86, TOK_WS=87, CHN_BLOCK_COMMENT=88, CHN_LINE_COMMENT=89, 
		CHN_WS=90, ALT_WS=91, ALT_UNTERMINATED=92, LEXER_COMMAND_LINE_COMMENT=93, 
		SKIP_COMMAND=94, MORE_COMMAND=95, TYPE_COMMAND=96, CHANNEL_COMMAND=97, 
		MODE_COMMAND=98, PUSHMODE_COMMAND=99, POPMODE_COMMAND=100, LEXER_COMMAND_WS=101, 
		UNTERMINATED_CHAR_SET=102, HEADER_STAR=103, HEADER_SEMI=104, HEADER_DOT=105;
	public static final int
		RULE_grammarFile = 0, RULE_grammarSpec = 1, RULE_grammarType = 2, RULE_analyzerDirectiveSpec = 3, 
		RULE_optionsSpec = 4, RULE_optionSpec = 5, RULE_superClassSpec = 6, RULE_languageSpec = 7, 
		RULE_tokenVocabSpec = 8, RULE_tokenLabelTypeSpec = 9, RULE_delegateGrammars = 10, 
		RULE_delegateGrammar = 11, RULE_grammarIdentifier = 12, RULE_tokensSpec = 13, 
		RULE_tokenList = 14, RULE_channelsSpec = 15, RULE_idList = 16, RULE_action = 17, 
		RULE_headerAction = 18, RULE_memberAction = 19, RULE_actionDestination = 20, 
		RULE_headerActionBlock = 21, RULE_headerActionContent = 22, RULE_packageDeclaration = 23, 
		RULE_importDeclaration = 24, RULE_singleTypeImportDeclaration = 25, RULE_actionBlock = 26, 
		RULE_modeSpec = 27, RULE_ruleSpec = 28, RULE_parserRuleSpec = 29, RULE_parserRuleDeclaration = 30, 
		RULE_exceptionGroup = 31, RULE_exceptionHandler = 32, RULE_finallyClause = 33, 
		RULE_parserRulePrequel = 34, RULE_parserRuleReturns = 35, RULE_throwsSpec = 36, 
		RULE_localsSpec = 37, RULE_ruleAction = 38, RULE_parserRuleVisibility = 39, 
		RULE_parserRuleDefinition = 40, RULE_parserRuleLabeledAlternative = 41, 
		RULE_altList = 42, RULE_parserRuleAlternative = 43, RULE_parserRuleElement = 44, 
		RULE_labeledParserRuleElement = 45, RULE_parserRuleAtom = 46, RULE_parserRuleReference = 47, 
		RULE_actionBlockArguments = 48, RULE_lexerRuleSpec = 49, RULE_lexerRuleDeclaration = 50, 
		RULE_lexerRuleBlock = 51, RULE_lexerRuleAlt = 52, RULE_lexerRuleElements = 53, 
		RULE_lexerRuleElement = 54, RULE_labeledLexerRuleElement = 55, RULE_lexerRuleElementBlock = 56, 
		RULE_lexerCommands = 57, RULE_lexerCommand = 58, RULE_lexerCommandExpr = 59, 
		RULE_lexerRuleAtom = 60, RULE_ebnf = 61, RULE_blockSuffix = 62, RULE_ebnfSuffix = 63, 
		RULE_notSet = 64, RULE_blockSet = 65, RULE_setElement = 66, RULE_block = 67, 
		RULE_characterRange = 68, RULE_terminal = 69, RULE_elementOptions = 70, 
		RULE_elementOption = 71, RULE_tokenOption = 72, RULE_identifier = 73, 
		RULE_ruleElementIdentifier = 74, RULE_classIdentifier = 75, RULE_genericClassIdentifier = 76, 
		RULE_packageIdentifier = 77, RULE_parserRuleIdentifier = 78, RULE_tokenIdentifier = 79;
	public static final String[] ruleNames = {
		"grammarFile", "grammarSpec", "grammarType", "analyzerDirectiveSpec", 
		"optionsSpec", "optionSpec", "superClassSpec", "languageSpec", "tokenVocabSpec", 
		"tokenLabelTypeSpec", "delegateGrammars", "delegateGrammar", "grammarIdentifier", 
		"tokensSpec", "tokenList", "channelsSpec", "idList", "action", "headerAction", 
		"memberAction", "actionDestination", "headerActionBlock", "headerActionContent", 
		"packageDeclaration", "importDeclaration", "singleTypeImportDeclaration", 
		"actionBlock", "modeSpec", "ruleSpec", "parserRuleSpec", "parserRuleDeclaration", 
		"exceptionGroup", "exceptionHandler", "finallyClause", "parserRulePrequel", 
		"parserRuleReturns", "throwsSpec", "localsSpec", "ruleAction", "parserRuleVisibility", 
		"parserRuleDefinition", "parserRuleLabeledAlternative", "altList", "parserRuleAlternative", 
		"parserRuleElement", "labeledParserRuleElement", "parserRuleAtom", "parserRuleReference", 
		"actionBlockArguments", "lexerRuleSpec", "lexerRuleDeclaration", "lexerRuleBlock", 
		"lexerRuleAlt", "lexerRuleElements", "lexerRuleElement", "labeledLexerRuleElement", 
		"lexerRuleElementBlock", "lexerCommands", "lexerCommand", "lexerCommandExpr", 
		"lexerRuleAtom", "ebnf", "blockSuffix", "ebnfSuffix", "notSet", "blockSet", 
		"setElement", "block", "characterRange", "terminal", "elementOptions", 
		"elementOption", "tokenOption", "identifier", "ruleElementIdentifier", 
		"classIdentifier", "genericClassIdentifier", "packageIdentifier", "parserRuleIdentifier", 
		"tokenIdentifier"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"'options'", "'tokens'", "'channels'", null, "'fragment'", "'lexer'", 
		"'parser'", "'grammar'", "'protected'", "'public'", "'private'", "'returns'", 
		"'locals'", "'init'", "'after'", "'throws'", "'catch'", "'finally'", null, 
		null, null, null, null, null, null, null, null, null, null, "'assoc'", 
		"'right'", "'left'", "'fail'", null, null, null, null, null, null, null, 
		null, null, null, null, "'header'", "'members'", null, null, null, null, 
		null, null, null, null, null, null, "'package'", null, "'static'", null, 
		null, null, null, null, null, null, null, "'superClass'", "'language'", 
		"'tokenVocab'", "'TokenLabelType'", null, null, null, null, null, null, 
		null, null, null, null, null, "'skip'", "'more'", "'type'", "'channel'", 
		null, "'pushMode'", "'popMode'", null, null, "'*'", "';'", "'.'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ID_STARTING_WITH_UPPERCASE", "ID_STARTING_WITH_LOWERCASE", "LEXER_CHAR_SET", 
		"DOC_COMMENT", "BLOCK_COMMENT", "LINE_COMMENT", "INT", "STRING_LITERAL", 
		"UNTERMINATED_STRING_LITERAL", "BEGIN_ARGUMENT", "BEGIN_ACTION", "OPTIONS", 
		"TOKENS", "CHANNELS", "IMPORT", "FRAGMENT", "LEXER", "PARSER", "GRAMMAR", 
		"PROTECTED", "PUBLIC", "PRIVATE", "RETURNS", "LOCALS", "INIT", "AFTER", 
		"THROWS", "CATCH", "FINALLY", "MODE", "COLON", "COLONCOLON", "COMMA", 
		"SEMI", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "RARROW", "LT", "ASSOC", 
		"RIGHT", "LEFT", "FAIL", "GT", "ASSIGN", "QUESTION", "STAR", "PLUS_ASSIGN", 
		"PLUS", "OR", "DOLLAR", "RANGE", "DOT", "AT", "HEADER", "MEMBERS", "SHARP", 
		"NOT", "ID", "WS", "ERRCHAR", "END_ARGUMENT", "UNTERMINATED_ARGUMENT", 
		"ARGUMENT_CONTENT", "HEADER_P_LINE_COMMENT", "HEADER_P_WS", "HEADER_PACKAGE", 
		"HEADER_IMPORT", "HEADER_STATIC", "HEADER_WS", "HEADER_END", "UNTERMINATED_HEADER", 
		"END_ACTION", "UNTERMINATED_ACTION", "ACTION_CONTENT", "OPT_BLOCK_COMMENT", 
		"OPT_LINE_COMMENT", "SUPER_CLASS", "LANGUAGE", "TOKEN_VOCAB", "TOKEN_LABEL_TYPE", 
		"OPT_WS", "TOK_BLOCK_COMMENT", "TOK_LINE_COMMENT", "TOK_ID", "TOK_WS", 
		"CHN_BLOCK_COMMENT", "CHN_LINE_COMMENT", "CHN_WS", "ALT_WS", "ALT_UNTERMINATED", 
		"LEXER_COMMAND_LINE_COMMENT", "SKIP_COMMAND", "MORE_COMMAND", "TYPE_COMMAND", 
		"CHANNEL_COMMAND", "MODE_COMMAND", "PUSHMODE_COMMAND", "POPMODE_COMMAND", 
		"LEXER_COMMAND_WS", "UNTERMINATED_CHAR_SET", "HEADER_STAR", "HEADER_SEMI", 
		"HEADER_DOT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ANTLRv4.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ANTLRv4Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class GrammarFileContext extends ParserRuleContext {
		public GrammarSpecContext grammarSpec() {
			return getRuleContext(GrammarSpecContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ANTLRv4Parser.EOF, 0); }
		public List<AnalyzerDirectiveSpecContext> analyzerDirectiveSpec() {
			return getRuleContexts(AnalyzerDirectiveSpecContext.class);
		}
		public AnalyzerDirectiveSpecContext analyzerDirectiveSpec(int i) {
			return getRuleContext(AnalyzerDirectiveSpecContext.class,i);
		}
		public List<RuleSpecContext> ruleSpec() {
			return getRuleContexts(RuleSpecContext.class);
		}
		public RuleSpecContext ruleSpec(int i) {
			return getRuleContext(RuleSpecContext.class,i);
		}
		public List<ModeSpecContext> modeSpec() {
			return getRuleContexts(ModeSpecContext.class);
		}
		public ModeSpecContext modeSpec(int i) {
			return getRuleContext(ModeSpecContext.class,i);
		}
		public GrammarFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRv4Listener ) ((ANTLRv4Listener)listener).enterGrammarFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRv4Listener ) ((ANTLRv4Listener)listener).exitGrammarFile(this);
		}
	}

	public final GrammarFileContext grammarFile() throws RecognitionException {
		GrammarFileContext _localctx = new GrammarFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_grammarFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			grammarSpec();
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPTIONS) | (1L << TOKENS) | (1L << CHANNELS) | (1L << IMPORT) | (1L << AT))) != 0)) {
				{
				{
				setState(161);
				analyzerDirectiveSpec();
				}
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID_STARTING_WITH_UPPERCASE) | (1L << ID_STARTING_WITH_LOWERCASE) | (1L << DOC_COMMENT) | (1L << FRAGMENT) | (1L << PROTECTED) | (1L << PUBLIC) | (1L << PRIVATE))) != 0)) {
				{
				{
				setState(167);
				ruleSpec();
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MODE) {
				{
				{
				setState(173);
				modeSpec();
				}
				}
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(179);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrammarSpecContext extends ParserRuleContext {
		public GrammarTypeContext grammarType() {
			return getRuleContext(GrammarTypeContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ANTLRv4Parser.SEMI, 0); }
		public List<TerminalNode> DOC_COMMENT() { return getTokens(ANTLRv4Parser.DOC_COMMENT); }
		public TerminalNode DOC_COMMENT(int i) {
			return getToken(ANTLRv4Parser.DOC_COMMENT, i);
		}
		public GrammarSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRv4Listener ) ((ANTLRv4Listener)listener).enterGrammarSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRv4Listener ) ((ANTLRv4Listener)listener).exitGrammarSpec(this);
		}
	}

	public final GrammarSpecContext grammarSpec() throws RecognitionException {
		GrammarSpecContext _localctx = new GrammarSpecContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_grammarSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOC_COMMENT) {
				{
				{
				setState(181);
				match(DOC_COMMENT);
				}
				}
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(187);
			grammarType();
			setState(188);
			identifier();
			setState(189);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrammarTypeContext extends ParserRuleContext {
		public TerminalNode LEXER() { return getToken(ANTLRv4Parser.LEXER, 0); }
		public TerminalNode GRAMMAR() { return getToken(ANTLRv4Parser.GRAMMAR, 0); }
		public TerminalNode PARSER() { return getToken(ANTLRv4Parser.PARSER, 0); }
		public GrammarTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRv4Listener ) ((ANTLRv4Listener)listener).enterGrammarType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRv4Listener ) ((ANTLRv4Listener)listener).exitGrammarType(this);
		}
	}

	public final GrammarTypeContext grammarType() throws RecognitionException {
		GrammarTypeContext _localctx = new GrammarTypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_grammarType);
		try {
			setState(196);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEXER:
				enterOuterAlt(_localctx, 1);
				{
				setState(191);
				match(LEXER);
				setState(192);
				match(GRAMMAR);
				}
				break;
			case PARSER:
				enterOuterAlt(_localctx, 2);
				{
				setState(193);
				match(PARSER);
				setState(194);
				match(GRAMMAR);
				}
				break;
			case GRAMMAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(195);
				match(GRAMMAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
